crates/aiken-lang/src/parser/definition/snapshots/decorators_record_and_fields.snap
---
source: crates/aiken-lang/src/parser/definition/data_type.rs
description: "Code:\n\n@tag(12)\npub type User {\n  name: ByteArray\n}\n"
---
DataType(
    DataType {
        decorators: [
            Decorator {
                kind: Tag {
                    value: 12,
                    base: Decimal {
                        numeric_underscore: false,
                    },
                },
                location: 0..8,
            },
        ],
        constructors: [
            RecordConstructor {
                decorators: [],
                location: 23..44,
                name: "User",
                arguments: [
                    RecordConstructorArg {
                        label: Some(
                            "name",
                        ),
                        annotation: Constructor {
                            location: 33..42,
                            module: None,
                            name: "ByteArray",
                            arguments: [],
                        },
                        location: 27..42,
                        tipo: (),
                        doc: None,
                    },
                ],
                doc: None,
                sugar: true,
            },
        ],
        doc: None,
        location: 0..44,
        name: "User",
        opaque: false,
        parameters: [],
        public: true,
        typed_parameters: [],
    },
)
